# kantata-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/google-apps-script/: kantata_oauth_broker.gs
extras/kantata-oauth-webapp/: Code.gs
scripts/: create_joinable_projects.py  run_kantata_mcp_keychain.sh  seed_demo_projects.py
src/kantata_assist/: __init__.py  cli.py  client.py  config.py  mcp_server.py  oauth.py  operations.py  story_wbs.py
tests/: __init__.py  conftest.py  test_adjust_assignees.py  test_cli_smoke.py  test_client.py  test_config.py  test_mcp_smoke.py  test_normalize.py  test_oauth.py  test_operations_http.py  test_story_type.py  test_story_wbs.py
