[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kantata-assist"
version = "0.1.0"
description = "CLI and MCP tools for Kantata OX (Mavenlink API)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<0.29",
  "mcp>=1.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]
binary = [
  "pyinstaller>=6.6",
]

[project.scripts]
kantata = "kantata_assist.cli:app"
kantata-mcp = "kantata_assist.mcp_server:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
